--- a/DesktopApp/src/edu/esprit/gui/FXMLMessagerie.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLMessagerie.fxml
@@ -6,17 +6,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="edu.esprit.gui.FXMLMessagerieController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLMessagerieController">
    <children>
       <ListView fx:id="list_msg" layoutX="14.0" layoutY="85.0" prefHeight="259.0" prefWidth="337.0" />
-      <Button fx:id="btn_ajouter" layoutX="424.0" layoutY="100.0" mnemonicParsing="false" onAction="#ajouter_message" text="Ajouter" />
-      <Button fx:id="btn_supprimer" layoutX="416.0" layoutY="228.0" mnemonicParsing="false" onAction="#supprimermessage" text="Supprimer" />
+      <Button fx:id="btn_ajouter" layoutX="413.0" layoutY="99.0" mnemonicParsing="false" onAction="#ajouter_message" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter" />
+      <Button fx:id="btn_supprimer" layoutX="413.0" layoutY="178.0" mnemonicParsing="false" onAction="#supprimermessage" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer" />
       <Text fill="#2b1da8" layoutX="62.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="List Messagerie" wrappingWidth="263.0351257324219">
          <font>
             <Font size="32.0" />
          </font>
       </Text>
-      <Button fx:id="btn_stat" layoutX="506.0" layoutY="345.0" mnemonicParsing="false" onAction="#stat" text="Statistique" />
+      <Button fx:id="btn_stat" layoutX="474.0" layoutY="344.0" mnemonicParsing="false" onAction="#stat" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Statistique" />
    </children>
 </AnchorPane>
