--- a/DesktopApp/src/edu/esprit/gui/Livre.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Livre.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.AmbientLight?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.PointLight?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -11,7 +10,6 @@
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
-<?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
@@ -22,22 +20,20 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1050.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.LivreController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="993.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.LivreController">
    <children>
       <ListView fx:id="livreview" layoutY="174.0" onMouseClicked="#afficheForm" prefHeight="320.0" prefWidth="256.0">
          <effect>
             <Glow level="0.43" />
          </effect>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+         
       </ListView>
       <StackPane layoutX="258.0" prefHeight="576.0" prefWidth="793.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css">
          <children>
             <Pane fx:id="pnlMenus" prefHeight="200.0" prefWidth="200.0" stylesheets="@styles/fxmlmaktabti.css" />
             <Pane fx:id="pnlCustomer" prefHeight="200.0" prefWidth="200.0" />
             <Pane fx:id="pnlOrders" prefHeight="200.0" prefWidth="200.0" />
-            <Pane fx:id="pnlOverview" blendMode="SRC_ATOP" prefHeight="596.0" prefWidth="820.0" stylesheets="@styles/fxmlmaktabti.css">
+            <Pane fx:id="pnlOverview" blendMode="SRC_ATOP" prefHeight="576.0" prefWidth="509.0" stylesheets="@styles/fxmlmaktabti.css">
                <children>
                   <TextField fx:id="search" layoutX="651.0" layoutY="70.0" onKeyTyped="#search_livre" opacity="0.66" prefHeight="25.0" prefWidth="128.0" promptText="search" style="-fx-border-radius: 2em;" styleClass="root" stylesheets="@styles/fxmlmaktabti.css" text="search">
                      <font>
@@ -45,9 +41,7 @@
                      </font>
                      <effect>
                         <Lighting bumpInput="$null" diffuseConstant="1.33">
-                           <light>
-                              <Light.Distant />
-                           </light>
+                           
                         </Lighting>
                      </effect>
                   </TextField>
@@ -56,9 +50,7 @@
                      <font>
                         <Font name="System Bold Italic" size="32.0" />
                      </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
+                     
                      <effect>
                         <Bloom />
                      </effect>
@@ -105,60 +97,34 @@
                   <VBox layoutX="123.0" layoutY="119.0" prefHeight="166.0" prefWidth="153.0" spacing="21.0">
                      <children>
                         <TextField fx:id="titre" layoutX="10.0" layoutY="10.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor></TextField>
+                           </TextField>
                         <DatePicker fx:id="date_pub">
-                           <cursor>
-                              <Cursor fx:constant="CLOSED_HAND" />
-                           </cursor></DatePicker>
+                           </DatePicker>
                         <TextField fx:id="langue" layoutX="10.0" layoutY="10.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor></TextField>
+                           </TextField>
                         <TextField fx:id="isbn" layoutX="10.0" layoutY="10.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor></TextField>
+                           </TextField>
                         <TextField fx:id="nb_pages" layoutX="10.0" layoutY="10.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor></TextField>
+                           </TextField>
                         <TextField fx:id="resume" layoutX="10.0" layoutY="10.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor></TextField>
+                           </TextField>
                         <TextField fx:id="prix" layoutX="10.0" layoutY="240.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor></TextField>
+                          </TextField>
                         <TextField fx:id="fileImage" layoutX="10.0" layoutY="286.0">
-                           <cursor>
-                              <Cursor fx:constant="TEXT" />
-                           </cursor>
+                           
                         </TextField>
                      </children>
                   </VBox>
                   <Button fx:id="cat_add" layoutX="10.0" layoutY="507.0" mnemonicParsing="false" onAction="#addlivre" prefHeight="37.0" prefWidth="109.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter">
-                     <cursor>
-                        <Cursor fx:constant="WAIT" />
-                     </cursor></Button>
+                     </Button>
                   <Button fx:id="cat_update" layoutX="128.0" layoutY="507.0" mnemonicParsing="false" onAction="#updatelivre" prefHeight="37.0" prefWidth="109.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jours">
-                     <cursor>
-                        <Cursor fx:constant="WAIT" />
-                     </cursor></Button>
+                     </Button>
                   <Button fx:id="cat_del" layoutX="251.0" layoutY="507.0" mnemonicParsing="false" onAction="#deletelivre" prefHeight="37.0" prefWidth="121.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer">
-                     <cursor>
-                        <Cursor fx:constant="WAIT" />
-                     </cursor></Button>
+                    </Button>
                   <ListView fx:id="listauteur" layoutX="376.0" layoutY="123.0" prefHeight="169.0" prefWidth="355.0">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></ListView>
+                    </ListView>
                   <ListView fx:id="listcategorie" layoutX="376.0" layoutY="357.0" prefHeight="151.0" prefWidth="355.0">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></ListView>
+                     </ListView>
                   <Label layoutX="372.0" layoutY="73.0" prefHeight="27.0" prefWidth="153.0" text="Auteur :" textFill="#3c3a3a" underline="true">
                      <font>
                         <Font name="System Bold Italic" size="31.0" />
@@ -205,28 +171,20 @@
                      </image>
                   </ImageView>
                   <Button fx:id="image" layoutX="294.0" layoutY="436.0" mnemonicParsing="false" onAction="#Buttonimage" prefHeight="37.0" prefWidth="68.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Image">
-                     <cursor>
-                        <Cursor fx:constant="WAIT" />
-                     </cursor>
+                    
                   </Button>
                   <Button fx:id="btn_stat" layoutX="397.0" layoutY="513.0" mnemonicParsing="false" onAction="#stat" text="Categorie_stat" />
                   <ImageView fx:id="PDF" fitHeight="37.0" fitWidth="30.0" layoutX="500.0" layoutY="512.0" onMouseClicked="#genererPDF">
                      <image>
                         <Image url="@images/pdf.png" />
                      </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
+                    
                   </ImageView>
                   <Button fx:id="pausebutton" layoutX="651.0" layoutY="512.0" mnemonicParsing="false" onAction="#pause" prefHeight="37.0" prefWidth="56.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="pause">
-                     <cursor>
-                        <Cursor fx:constant="WAIT" />
-                     </cursor>
+                    
                   </Button>
                   <Button fx:id="musicButton" layoutX="554.0" layoutY="512.0" mnemonicParsing="false" onAction="#play" prefHeight="37.0" prefWidth="68.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="music">
-                     <cursor>
-                        <Cursor fx:constant="WAIT" />
-                     </cursor>
+                     
                   </Button>
                </children>
                <effect>
@@ -234,14 +192,10 @@
                      <bumpInput>
                         <Shadow />
                      </bumpInput>
-                     <light>
-                        <Light.Distant azimuth="0.0" elevation="65.93" />
-                     </light>
+                     
                   </Lighting>
                </effect>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
+               
             </Pane>
          </children>
       </StackPane>
@@ -249,9 +203,7 @@
          <image>
             <Image url="@images/2.png" />
          </image>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+         
       </ImageView>
       <AmbientLight color="CHARTREUSE" lightOn="true" />
       <PointLight color="CHARTREUSE" lightOn="true" />
@@ -259,9 +211,7 @@
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+        
          <effect>
             <Bloom />
          </effect>
@@ -275,7 +225,5 @@
    <effect>
       <DropShadow color="#1b1eeb" />
    </effect>
-   <cursor>
-      <Cursor fx:constant="MOVE" />
-   </cursor>
+   
 </AnchorPane>
