--- a/DesktopApp/src/edu/esprit/gui/Register.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Register.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #171717;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.RegisterController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="600.0" style="-fx-background-color: #171717;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.RegisterController">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane layoutX="-27.0" layoutY="85.0" prefHeight="393.0" prefWidth="626.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css">
+            <AnchorPane layoutX="-27.0" layoutY="85.0" prefHeight="390.0" prefWidth="626.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css">
                <children>
                   <Button fx:id="login" layoutX="246.0" layoutY="325.0" mnemonicParsing="false" onAction="#Registration" prefHeight="37.0" prefWidth="95.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Register" />
                   <Button fx:id="forgotpasswd" layoutX="362.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="94.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
@@ -41,17 +41,17 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="10.0" styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Prenom" textFill="#1d1d1d">
+                        <Label layoutX="10.0" layoutY="10.0" prefHeight="32.0" prefWidth="48.0" styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Prenom" textFill="#1d1d1d">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="27.0" text="Email" textFill="#0d0d0d">
+                        <Label layoutX="10.0" layoutY="27.0" prefHeight="28.0" prefWidth="36.0" text="Email" textFill="#0d0d0d">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="100.0" text="Mot de passe" textFill="#020202">
+                        <Label layoutX="10.0" layoutY="100.0" prefHeight="19.0" prefWidth="88.0" text="Mot de passe" textFill="#020202">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
