--- a/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
@@ -31,7 +31,7 @@
                   <Image url="@images/search.png" />
                </image>
             </ImageView>
-            <VBox layoutX="181.0" layoutY="164.0" prefHeight="144.0" prefWidth="91.0" spacing="25.0">
+            <VBox layoutX="207.0" layoutY="170.0" prefHeight="304.0" prefWidth="91.0" spacing="25.0">
                <children>
                   <Label text="Nom">
                      <font>
@@ -43,22 +43,22 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="10.0" layoutY="27.0" text="Email" textFill="#191818">
+                  <Label layoutX="10.0" layoutY="27.0" prefHeight="43.0" prefWidth="36.0" text="Email" textFill="#191818">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="10.0" layoutY="100.0" text="Mot de passe" textFill="#1b1a1a">
+                  <Label text="Mot de passe" textFill="#1b1a1a">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="10.0" layoutY="145.0" text="Telephone" textFill="#0b0b0b">
+                  <Label text="Telephone" textFill="#0b0b0b">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="10.0" layoutY="190.0" text="Role" textFill="#101010">
+                  <Label text="Role" textFill="#101010">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -74,11 +74,11 @@
                   <TextField fx:id="cat_tel" layoutX="10.0" layoutY="10.0" />
                </children>
             </VBox>
-            <Button fx:id="cat_add" layoutX="218.0" layoutY="444.0" mnemonicParsing="false" onAction="#adduser" prefHeight="37.0" prefWidth="82.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter" />
-            <Button fx:id="cat_update" layoutX="349.0" layoutY="444.0" mnemonicParsing="false" onAction="#updateuser" prefHeight="37.0" prefWidth="131.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jour" />
-            <Button fx:id="cat_del" layoutX="218.0" layoutY="506.0" mnemonicParsing="false" onAction="#deleteuser" prefHeight="37.0" prefWidth="131.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer" />
+            <Button fx:id="cat_add" layoutX="211.0" layoutY="504.0" mnemonicParsing="false" onAction="#adduser" prefHeight="37.0" prefWidth="82.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter" />
+            <Button fx:id="cat_update" layoutX="342.0" layoutY="504.0" mnemonicParsing="false" onAction="#updateuser" prefHeight="37.0" prefWidth="131.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jour" />
+            <Button fx:id="cat_del" layoutX="211.0" layoutY="566.0" mnemonicParsing="false" onAction="#deleteuser" prefHeight="37.0" prefWidth="131.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer" />
             <ListView fx:id="useview" layoutX="525.0" layoutY="108.0" prefHeight="381.0" prefWidth="379.0" />
-            <Button fx:id="reset" layoutX="377.0" layoutY="506.0" mnemonicParsing="false" onAction="#onreset" prefHeight="25.0" prefWidth="91.0" style="-fx-background-color: #FFD700;" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
+            <Button fx:id="reset" layoutX="370.0" layoutY="566.0" mnemonicParsing="false" onAction="#onreset" prefHeight="25.0" prefWidth="91.0" style="-fx-background-color: #FFD700;" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
             <Button fx:id="excel" layoutX="773.0" layoutY="504.0" mnemonicParsing="false" onAction="#excelfile" prefHeight="37.0" prefWidth="131.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Générer">
                <graphic>
                   <ImageView fitHeight="36.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
@@ -87,23 +87,13 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <MenuButton fx:id="menurole" layoutX="300.0" layoutY="384.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="153.0" style="-fx-background-color: white;">
+            <MenuButton fx:id="menurole" layoutX="300.0" layoutY="413.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="153.0" style="-fx-background-color: white;">
               <items>
                 <MenuItem fx:id="Admin" mnemonicParsing="false" onAction="#Adminrole" text="Administrateur" />
                 <MenuItem fx:id="Client" mnemonicParsing="false" onAction="#clientrole" text="Client" />
                   <MenuItem fx:id="Auteur" mnemonicParsing="false" onAction="#Auteurrole" text="Auteur" />
               </items>
             </MenuButton>
-            <Label fx:id="user" layoutX="14.0" layoutY="19.0" prefHeight="35.0" prefWidth="112.0" text="Username">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="prenom" layoutX="14.0" layoutY="52.0" prefHeight="35.0" prefWidth="112.0" text="Username">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
             <FontAwesomeIconView glyphName="USERS" layoutX="143.0" layoutY="69.0" size="25" wrappingWidth="30.000002473592758" />
          </children>
       </Pane>
